# rag-ecosystem

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: 0_basic_rag.ipynb  1_improve_rag_query.ipynb  2_Routing_in_rag.ipynb  3_indexing_in _rag.ipynb  4_retrieval_and_generation.ipynb  5_rag_evaluation.ipynb  6_agentic_rag.ipynb
