[project]
name = "rag-ecosystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.3.5",
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.0.1",
    "langchain-huggingface>=1.0.1",
    "langchain-text-splitters>=1.0.0",
    "langsmith>=0.4.45",
    "tiktoken>=0.12.0",
]
