[project]
name = "rag-ecosystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.86",
    "bs4>=0.0.2",
    "chromadb>=1.3.5",
    "cohere>=5.20.0",
    "curl-cffi>=0.13.0",
    "datasets>=2.20.0",
    "deepeval>=3.7.2",
    "duckdb>=1.4.2",
    "faiss-cpu>=1.13.0",
    "fitz>=0.0.1.dev2",
    "grouse>=0.4.2",
    "html2text>=2025.4.15",
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "langchain>=1.0.8",
    "langchain-classic>=1.0.0",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.0.1",
    "langchain-huggingface>=1.0.1",
    "langchain-text-splitters>=1.0.0",
    "langsmith>=0.4.45",
    "lxml>=6.0.2",
    "pdfminer>=20191125",
    "pdfplumber>=0.11.8",
    "pikepdf>=10.0.2",
    "pypdf>=6.4.0",
    "pytube>=15.0.0",
    "ragas>=0.3.2",
    "ragatouille>=0.0.9.post2",
    "sentence-transformers>=5.1.2",
    "tiktoken>=0.12.0",
    "youtube-transcript-api>=1.2.3",
    "yt-dlp>=2025.11.12",
]
